# refrigerator_c-

./: CMakeLists.txt  CMakeLists_nonconan.txt  ObjectIO.cpp  ObjectIO.h  README.md  comp.sh  comp_nonconan.sh  conanfile.txt  foodItem.cpp  foodItem.h  fridgeInventory.cpp  fridgeInventory.h  main.cpp  main.h  run.bat  run.sh
src/: foodItem.cpp  foodItem.h  fridgeInventory.cpp  fridgeInventory.h  main.cpp  main.h
